<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tron"
    tools:context="com.upax.openpay.vista.movies.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="@color/blue_cyan"
            android:textStyle="bold"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:textSize="44sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitulo"
            android:textAlignment="center"
            android:textColor="@color/blue_cyan"
            android:textStyle="bold"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:textSize="34sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/iniciar"
        android:layout_width="170sp"
        android:layout_height="30sp"
        android:layout_gravity="center"
        android:background="@color/blue"
        android:textColor="@color/black"
        android:text="@string/Iniciar" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>