<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top"
            android:layout_margin="@dimen/dimen_10dp"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_34dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_2dp"
            android:layout_margin="@dimen/dimen_5dp"
            android:background="@color/white"
            android:orientation="vertical" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_14dp"
            android:layout_marginBottom="@dimen/dimen_5dp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Most_Popular"
            android:layout_margin="@dimen/dimen_10dp"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_34dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_2dp"
            android:layout_margin="@dimen/dimen_5dp"
            android:background="@color/white"
            android:orientation="vertical" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPopular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_14dp"
            android:layout_marginBottom="@dimen/dimen_5dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Playing_Now"
            android:layout_margin="@dimen/dimen_10dp"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_34dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_2dp"
            android:layout_margin="@dimen/dimen_5dp"
            android:background="@color/white"
            android:orientation="vertical" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewNow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_14dp"
            android:layout_marginBottom="@dimen/dimen_5dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_70"
            android:background="@drawable/tron"
            android:textSize="@dimen/dimen_34dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>