<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.upax.openpay.vista.movies.menu.MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main_abl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/gray"
                app:theme="@style/ToolbarTheme">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="50sp"
                        android:layout_weight="1"
                        android:background="@color/gray"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="140sp"
                            android:layout_height="50sp"
                            android:src="@drawable/tmdb" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="50sp"
                        android:layout_weight="1"
                        android:background="@color/gray"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="50sp"
                            android:layout_weight="1"
                            android:background="@color/gray"
                            android:gravity="right"
                            android:orientation="vertical">

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:id="@+id/fragment_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="70sp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />

        <HorizontalScrollView
            android:id="@+id/main_hsv"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:layout_gravity="bottom"
            android:background="@color/blue"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/movie_db2"
                        android:layout_width="40sp"
                        android:layout_height="37dp"
                        android:layout_marginLeft="30sp"
                        android:layout_marginTop="5sp"
                        android:layout_marginRight="30sp"
                        android:background="@drawable/tron" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5sp"
                        android:text="@string/movie_db"
                        android:textColor="@color/white"
                        android:textSize="8sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/mapa2"
                        android:layout_width="40sp"
                        android:layout_height="40sp"
                        android:layout_marginLeft="30sp"
                        android:layout_marginTop="5sp"
                        android:layout_marginRight="30sp"
                        android:background="@drawable/tron" />

                    <androidx.appcompat.widget.AppCompatTextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5sp"
                        android:text="@string/mapa"
                        android:textColor="@color/white"
                        android:textSize="8sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/subir_imagen2"
                        android:layout_width="40sp"
                        android:layout_height="40sp"
                        android:layout_marginLeft="30sp"
                        android:layout_marginTop="5sp"
                        android:layout_marginRight="30sp"
                        android:background="@drawable/tron" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5sp"
                        android:text="@string/subir_imagen"
                        android:textColor="@color/white"
                        android:textSize="8sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/pagina"
                        android:layout_width="40sp"
                        android:layout_height="40sp"
                        android:layout_marginLeft="30sp"
                        android:layout_marginTop="5sp"
                        android:layout_marginRight="30sp"
                        android:background="@drawable/tron" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5sp"
                        android:text="Informacion"
                        android:textColor="@color/white"
                        android:textSize="8sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/contacto"
                        android:layout_width="40sp"
                        android:layout_height="40sp"
                        android:layout_marginLeft="30sp"
                        android:layout_marginTop="5sp"
                        android:layout_marginRight="30sp"
                        android:background="@drawable/tron" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5sp"
                        android:text="Acerca de.."
                        android:textColor="@color/white"
                        android:textSize="8sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
